# config/api/swagger.json
@@ -27,6 +27,14 @@
                     "Alerts"
                 ],
                 "summary": "Get all alerts",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter alerts by UCA ID",
+                        "name": "ucaID",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "List of alerts",
